# cli_unit_converter

./: .editorconfig  .gitignore  .vale.ini  .valeignore  LICENSE  changelog.md  pyproject.toml  readme.md
.github/workflows/: release.yml
config/vocabularies/Project/: accept.txt
src/: enums.py  exceptions.py  logging_config.py  main.py  nlp_module.py  script.py
src/config/: enums.py  exceptions.py  logging_config.py  unit_definition.py
src/core/: convert.py  select_menu.py
src/utils/: nlp_module.py
styles/Microsoft/: AMPM.yml  Adverbs.yml  Avoid.yml  DateNumbers.yml  GenderBias.yml  Headings.yml  Inclusivity.yml  Terms.yml  Wordiness.yml
styles/vocabularies/Project/: accept.txt
