[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template-python-high-standard"
version = "0.1.0"
description = "Enterprise-Grade Python Template focused on Scalability and Security."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luiz Felipe", email = "luizfelipemelos@gamil.com" }]
dependencies = []

# --- Setuptools configuration for package discovery. ---
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests*",
]

# --- Ruff configuration for linting and formatting. ---
[tool.ruff]
fix = false
unsafe-fixes = false
line-length = 100
indent-width = 4
preview = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.ruff.lint]
select = [
    "F", # Pyflakes (Basic logical errors.)
    "E", # Pycodestyle Errors (Style, indentation, and blank lines.)
    "W", # Pycodestyle Warnings
    "C90", # McCabe (Cyclomatic complexity.)
    "I", # Isort (Import sorting.)
    "N", # PEP 8 Naming (Naming conventions.)
    "D", # Pydocstyle (Google-style docstrings.)
    "UP", # Pyupgrade (Modern Python.)
    "YTT", # Flake8-2020 (Version compatibility.)
    "B", # Flake8-Bugbear (Finds subtle bugs.)
    "A", # Flake8-Builtins (Avoids overwriting built-in names like id, dir, and list.)
    "C4", # Flake8-Comprehensions (Improves list and dictionary comprehensions.)
    "T10", # Flake8-Debugger (Prohibits pdb and ipdb in production.)
    "SIM", # Flake8-Simplify (Suggests code simplifications.)
    "TID", # Flake8-Tidy-Imports (Import rules.)
    "ARG", # Flake8-Unused-Arguments
    "PTH", # Flake8-Use-Pathlib (Modern path handling with pathlib.)
    "ERA", # Eradicate (Prohibits commented-out or dead code.)
    "PL", # Pylint (Complex refactoring and convention rules.)
    "TRY", # Tryceratops (Best practices for exception handling.)
    "RUF", # Ruff-specific rules.
    "S", # Bandit (Security and vulnerabilities.)
    "G", # Flake8-logging-format
    "ICN", # Import conventions
    "ISC", # Implicit string concatenation
]
ignore = [
    "D203", # Conflict with Google docstring (prefer D211).
    "D213", # Conflict with Google docstring (prefer D212 - summary on the first line).
    "TRY003", # Allow long messages in exceptions.
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "PLR2004"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["src"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # Do not use relative names in imports.

# Naming configuration.
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]
# --- Mypy configuration for static type checking. ---
[tool.mypy]
python_version = "3.10"
strict = true                      # Enable all strict flags.
warn_return_any = true             # Warn if returning Any.
warn_unused_configs = true
disallow_any_unimported = true     # Block types from libraries without typing.
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# Harmony with Ruff: Allow dynamic imports if necessary, but issue a warning.
implicit_reexport = false

# Ignore errors from specific libraries that do not have typing.
# [[tool.mypy.overrides]]
# module = "library_without_type.*"
# ignore_missing_imports = true


# --- Pyright configuration for speed and safety. ---
[tool.pyright]
typeCheckingMode = "strict"        # Most rigorous mode.
pythonVersion = "3.10"
include = ["src"]
exclude = ["**/__pycache__", "tests"]
reportMissingImports = "error"     # Require clear imports.
reportMissingTypeStubs = "error"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
reportUnusedCallResult = "warning"
reportUnnecessaryIsInstance = "warning" # Clean redundant code.
reportImplicitStringConcatenation = "warning"
