[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template-python-high-standard"
version = "0.1.0"
description = "Enterprise-Grade Python Template focused on Scalability and Security."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luiz Felipe", email = "luizfelipemelos@gamil.com" }]
dependencies = []

# --- Setuptools configuration for package discovery. ---
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests*",
]

# --- Ruff configuration for linting and formatting. ---
[tool.ruff]
fix = false
unsafe-fixes = false
line-length = 100
indent-width = 4
preview = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "D203", # Conflict with Google docstring (prefer D211).
    "D213", # Conflict with Google docstring (prefer D212 - summary on the first line).
    "D406",
    "D407",
    "ANN101",
    "ANN102",
    "ANN204",
    "TRY003",
    "TRY301",
    "EM101",
    "EM102",
    "T201",
    "TD003",
    "TD002",
    "FIX002",
    "CPY",
    "DOC501",
    "Q000",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "PLR2004"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["src"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # Do not use relative names in imports.

# Naming configuration.
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]
# --- Mypy configuration for static type checking. ---
# --- Mypy configuration for static type checking. ---
[tool.mypy]
python_version = "3.10"
# Google Style 3.19: Prioritize safety and clarity.
strict = true                      # Enable all strict flags (disallow_untyped_defs).
warn_return_any = true             # Google Style 3.19.1: Avoid Anywhere possible.
warn_unused_configs = true
disallow_any_unimported = true     # Block types from libraries without typing stubs.
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# Google Style 3.19.12: Explicit imports are preferred.
# This prevents re-exporting modules implicitly unless __all__ is used.
implicit_reexport = false

# Exclude tests from strict type checking to avoid conflicts with mocking/fixtures.
exclude = ["tests"]

# Ignore errors from specific libraries that do not have typing.
# [[tool.mypy.overrides]]
# module = "library_without_type.*"
# ignore_missing_imports = true


# --- Pyright configuration for speed and safety. ---
[tool.pyright]
typeCheckingMode = "strict"        # Align with Mypy strictness.
pythonVersion = "3.10"
include = ["src"]
exclude = ["**/__pycache__", "tests", "**/.*"] # Ignore cache and dotfiles.

# --- Alignment with Google Style Guide ---

# Google Style 2.2.4: Do not use relative names in imports.
reportMissingImports = "error"

# Google Style 3.19.15: "Prefer to specify type parameters for generic types".
# This flags usages like `l: list = []` (missing [type]).
reportMissingTypeArgument = "error"

# Google Style 3.2: "Make use of Python’s implicit line joining inside parentheses".
# We DISABLE this warning because Google Style explicitly allows implicit concatenation
# for long strings/URLs split across lines.
reportImplicitStringConcatenation = false

# --- Enterprise Safety Checks ---
reportMissingTypeStubs = "error"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
reportUnusedCallResult = "warning"
reportUnnecessaryIsInstance = "warning"
