[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template-python-high-standard"
version = "0.1.0"
description = "Enterprise-Grade Python Template focused on Scalability and Security."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luiz Felipe", email = "luizfelipemelos@gamil.com" }]
dependencies = ["rich>=13.0.0", "loguru>=0.7.0"]

# --- Setuptools configuration for package discovery. ---
[tool.setuptools.packages.find]
namespaces = false
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests*",
]

# --- Bumpver configuration for version sync. ---
[tool.bumpver]
current_version = "v1.2.1"
version_pattern = "vMAJOR.MINOR.PATCH"
tag_format = "{version}"
commit_message = "bump: {old_version} -> {new_version}"

commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"src/main.py" = [
    "__version__: Final\\[str\\] = 'MAJOR.MINOR.PATCH'"
]
"readme.md" = [
    'https://img.shields.io/badge/version-{version}-blue',
]

# --- Ruff configuration for linting and formatting. ---
[tool.ruff]
line-length = 100
indent-width = 4
preview = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    # 1. Delegação de Responsabilidade (Deixe para o Mypy)
    "ANN",      # O Ruff não deve checar tipos, o Mypy no modo strict já faz isso com contexto global.

    # 2. Conflitos Nativos (Linter vs Formatador do próprio Ruff)
    "COM812",   # Obrigatório ignorar se for usar o `ruff format`
    "ISC001",   # Obrigatório ignorar se for usar o `ruff format`

    # 3. Conflitos de Docstring (Padrão Google)
    "D203",     # Conflito lógico (preferir D211).
    "D213",     # Conflito lógico (preferir D212 - summary na primeira linha).
    "D406",
    "D407",

    # 4. Regras Ruidosas / Anti-Pragmáticas
    "TRY003",   # Exige criar classes de erro específicas para tudo (burocrático para scripts).
    "TRY301",   # Raise dentro de try blocks.
    "EM101",    # Exception com string pura.
    "EM102",    # Exception com f-string.
    "T201",     # Proíbe 'print()'. (MANTENHA IGNORADO, já que o seu projeto é uma CLI).
    "TD002",    # Exige autor nos TODOs.
    "TD003",    # Exige link de issue do GitHub nos TODOs.
    "FIX002",   # Proíbe comentários TODO (irracional para desenvolvimento ativo).
    "CPY",      # Exige banner de copyright no topo de todo arquivo.
    "DOC501",   # Pedantismo extremo com docstrings.
    "Q000",     # Conflito de aspas (o formatador já resolve isso sozinho).
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6

[tool.ruff.lint.per-file-ignores]
# Em testes, asserts e magic numbers são esperados e não representam falha de segurança
"tests/*" = ["S101", "S105", "PLR2004"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["src"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # Obriga imports absolutos (ex: from src.utils import X)

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]
# --- Mypy configuration for static type checking. ---
# --- Mypy configuration for static type checking. ---

# --- Mypy configuration for static type checking. ---
[tool.mypy]
# Versão do Python alvo (deve alinhar com requires-python)
python_version = "3.10"

# Modo Strict: Ativa todas as checagens mais rigorosas por padrão.
# A Google preza por tipagem explícita em 100% do código público.
strict = true

# Configurações detalhadas (muitas já inclusas no strict, mas explícitas para clareza)
warn_return_any = true             # Alerta se uma função retornar Any quando deveria retornar algo específico.
warn_unused_configs = true         # Alerta sobre configurações do mypy não utilizadas.
disallow_subclassing_any = true    # Proíbe herdar de classes não tipadas (Any).
disallow_any_generics = true       # Proíbe List, Dict sem tipos (ex: deve usar List[str]).
disallow_untyped_calls = true      # Proíbe chamar funções que não têm anotação de tipo.
disallow_untyped_defs = true       # Obriga anotação de tipo em todas as definições de função.
disallow_incomplete_defs = true    # Obriga anotação completa (não pode faltar apenas o retorno).
check_untyped_defs = true          # Checa o corpo de funções mesmo que elas não tenham anotação.
disallow_untyped_decorators = true # Decorators também precisam ser tipados.
no_implicit_optional = true        # Argumentos com valor default None devem ser Optional[T].
warn_redundant_casts = true        # Alerta casts desnecessários.
warn_unused_ignores = true         # Alerta se um # type: ignore não for mais necessário.
warn_no_return = true              # Garante que todas as saídas de função retornem valor.
warn_unreachable = true            # Alerta código inalcançável (dead code).
implicit_reexport = false          # Exige exportação explícita em __init__.py.
strict_equality = true             # Evita comparações entre tipos incompatíveis.

# Configuração de Output
show_error_codes = true            # Mostra o código do erro (ex: [arg-type]) para facilitar ignores.
show_column_numbers = true         # Ajuda na integração com IDEs.
pretty = true                      # Melhora a legibilidade no terminal.

# Configuração de Importação e Caminhos (Fundamental para layout src/)
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# --- Per-module options ---
# Use isso para bibliotecas que não possuem tipos (stubs) oficiais.
# Exemplo: Se você usar uma lib antiga que dá erro, adicione aqui.
# [[tool.mypy.overrides]]
# module = ["library_sem_tipo.*"]
# ignore_missing_imports = true